# eth-mcp

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/: README.zh-CN.md
